--- a/tests/Zenix.Tests.csproj
+++ b/tests/Zenix.Tests.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\src\Zenix.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Core.Tests/Assets/simple.bin">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
