Add comprehensive documentation and detailed design for Z80 CPU core
- Created Quick Reference documentation for Zenix emulator, linking key resources for developers, users, and project management.
- Added detailed design document for Z80 CPU core, covering architecture, instruction execution, timing system, and testing strategy.
- Established a structured README for design documentation, outlining standards and planned components.
- Introduced Z80 cycle timing constants and opcode definitions for improved code readability and maintainability.

--- a/src/Zenix.csproj
+++ b/src/Zenix.csproj
@@ -18,4 +18,8 @@
     <AssemblyCopyright>Copyright © $(Year)</AssemblyCopyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="../Demos/**/*.cs" />
+  </ItemGroup>
+
 </Project>
